<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="ashwiniyer.thebuttongamereturns.StartScreen"
                android:background="@android:color/black"
                android:id="@+id/relativeLayout">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/game_title_part1"
        android:id="@+id/gameTitleTextView"
        android:textColor="@android:color/white"
        android:textSize="42sp"
        android:textStyle="bold"
        android:layout_alignBottom="@+id/textView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="50dp"
        android:gravity="center_horizontal"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/game_title_part2"
        android:id="@+id/textView"
        android:textColor="@android:color/holo_green_light"
        android:textSize="42sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tap_message"
        android:id="@+id/tapMessageTextView"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="142dp"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:gravity="center_horizontal"/>
</RelativeLayout>
