<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="ashwiniyer.thebuttongamereturns.GameModeSelect"
                android:background="@android:color/black">





    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/game_mode_select_title"
        android:id="@+id/gameModeSelectTitleTextView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="32sp"
        android:textColor="@android:color/white"
        android:gravity="center_vertical|center_horizontal"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/survival_mode_button"
        android:id="@+id/timedModeTextView"
        android:textSize="60sp"
        android:textColor="@android:color/holo_orange_light"
        android:gravity="center_vertical|center_horizontal"
        android:singleLine="false"
        android:background="@drawable/back"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/gameModeSelectTitleTextView"
        android:layout_marginTop="100dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/timed_mode_button"
        android:id="@+id/survivalModeTextView"
        android:gravity="center_vertical|center_horizontal"
        android:textColor="#0095ad"
        android:textSize="60sp"
        android:background="@drawable/back"
        android:layout_below="@+id/timedModeTextView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="80dp"/>
</RelativeLayout>
